<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="#PACKAGE_NAME#.activity.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="86dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:src="@drawable/logo"
            tools:ignore="ContentDescription" />

        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <!--  Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_login"
                android:layout_height="fill_parent"
                android:layout_width="match_parent"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/button_drawable"
                android:padding="12dp"
                android:text="@string/action_login_short"
                android:textColor="#FFFFFF"
                android:textStyle="normal" />

        </LinearLayout>

        <TextView
            android:id="@+id/btn_signup"
            android:layout_height="fill_parent"
            android:layout_width="match_parent"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/action_sign_up_short"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textStyle="normal" />

    </LinearLayout>


</RelativeLayout>